--- a/angular-loiane/diretivas/package.json
+++ b/angular-loiane/diretivas/package.json
@@ -10,7 +10,6 @@
     "lint": "ng lint"
   },
   "private": true,
-
   "dependencies": {
     "@angular/animations": "^16.2.0",
     "@angular/common": "^16.2.0",
@@ -20,6 +19,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
