--- a/angular-loiane/diretivas/angular.json
+++ b/angular-loiane/diretivas/angular.json
@@ -93,19 +93,13 @@
               "src/assets"
             ],
             "styles": [
-
-              "node_modules/bootstrap/scss/bootstrap.scss",
-
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-
-              "src/styles.scss"
-
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.min.css",
+              "src/styles.css"
             ],
 
             "scripts": [
-
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-
             ]
           }
         },
