Diretivas: HostListener e HostBinding

--- a/angular-loiane/diretivas/angular.json
+++ b/angular-loiane/diretivas/angular.json
@@ -117,7 +117,8 @@
   },
   "schematics": {
     "@schematics/angular:component": {
-      "style": "css"
+      "style": "css",
+      "skipTests": true
     }
   },
   "cli": {
